--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -177,13 +177,14 @@
     background-size: 80px 16px;
   }
   .chat-bg-hexagons {
-    background-image: url("data:image/svg+xml,%3Csvg width='24' height='42' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 21.3L.3 14.5v-14L12-6.3l11.7 6.8v14zm0 28.4L.3 42.9v-14L12 22.1l11.7 6.8v14z' fill='none' stroke='%2310b981' stroke-width='1' stroke-opacity='0.4'/%3E%3C/svg%3E");
-    background-size: 24px 42px;
+    background-image: url("data:image/svg+xml,%3Csvg width='29' height='50.115' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.498 16.858 0 8.488.002-8.257l14.5-8.374L29-8.26l-.002 16.745zm0 50.06L0 58.548l.002-16.745 14.5-8.373L29 41.8l-.002 16.744zM28.996 41.8l-14.498-8.37.002-16.744L29 8.312l14.498 8.37-.002 16.745zm-29 0-14.498-8.37.002-16.744L0 8.312l14.498 8.37-.002 16.745z' fill='none' stroke='%2310b981' stroke-width='0.5' stroke-opacity='0.4'/%3E%3C/svg%3E");
+    background-size: 58px 100.23px;
   }
   .dark .chat-bg-waves {
     background-image: url("data:image/svg+xml,%3Csvg width='80' height='16' viewBox='0 0 80 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 8 Q20 0 40 8 T80 8' fill='none' stroke='%2310b98118' stroke-width='2'/%3E%3C/svg%3E");
   }
   .dark .chat-bg-hexagons {
-    background-image: url("data:image/svg+xml,%3Csvg width='24' height='42' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 21.3L.3 14.5v-14L12-6.3l11.7 6.8v14zm0 28.4L.3 42.9v-14L12 22.1l11.7 6.8v14z' fill='none' stroke='%2310b981' stroke-width='1' stroke-opacity='0.2'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg width='29' height='50.115' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.498 16.858 0 8.488.002-8.257l14.5-8.374L29-8.26l-.002 16.745zm0 50.06L0 58.548l.002-16.745 14.5-8.373L29 41.8l-.002 16.744zM28.996 41.8l-14.498-8.37.002-16.744L29 8.312l14.498 8.37-.002 16.745zm-29 0-14.498-8.37.002-16.744L0 8.312l14.498 8.37-.002 16.745z' fill='none' stroke='%2310b981' stroke-width='0.5' stroke-opacity='0.2'/%3E%3C/svg%3E");
+    background-size: 58px 100.23px;
   }
 }
